// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clean normalize input 1`] = `
Array [
  Object {
    "annee": 4150,
    "civilite": "n",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 4000,
    "civilite": "n",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 4500,
    "civilite": "n",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`fix various invalid data should normalize civilites 1`] = `
Array [
  Object {
    "annee": 1943,
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2018-07-03",
    "numero_dossier": "99/07460",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": 1954,
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2014-03-28",
    "numero_dossier": "13/00988",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1948",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-07-30",
    "numero_dossier": "18/00594",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1945",
    "civilite": "F",
    "code_postal": 59139,
    "date_ouverture": "2019-01-25",
    "numero_dossier": "18/00408",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1939",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2017-06-22",
    "numero_dossier": "17/00177",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1930",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-03-05",
    "numero_dossier": "90/03580",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1949",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "2017-12-22",
    "numero_dossier": "12/00812",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "wattignies",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2006-09-05",
    "numero_dossier": "05/01208",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1920",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-10-24",
    "numero_dossier": "18/00598",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1932",
    "civilite": "F",
    "code_postal": 59139,
    "date_ouverture": "2010-10-20",
    "numero_dossier": "10/00104",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1934",
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2019-01-30",
    "numero_dossier": "14/00442",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1946",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2019-01-15",
    "numero_dossier": "18/01467",
    "residence": "En établissement",
    "type": "Sauvegarde de justice",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-03-27",
    "numero_dossier": "16/01264",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2016-05-30",
    "numero_dossier": "15/00802",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2015-01-27",
    "numero_dossier": "14/00774",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1923",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "1986-12-09",
    "numero_dossier": "12/05498",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1942",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2019-02-07",
    "numero_dossier": "17/01237",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1945",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2009-01-24",
    "numero_dossier": "08/0534",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1922",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2012-02-27",
    "numero_dossier": "11/00974",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1943",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-02-12",
    "numero_dossier": "15/00081",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1936",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-03-13",
    "numero_dossier": "16/00789",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1921",
    "civilite": "H",
    "code_postal": 59120,
    "date_ouverture": "2018-12-17",
    "numero_dossier": "18/00670",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "loos",
  },
  Object {
    "annee": "1929",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-01-27",
    "numero_dossier": "14/00761",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1946",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "2007-09-12",
    "numero_dossier": "07/00071",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1926",
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2018-06-13",
    "numero_dossier": "06/02429",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1947",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2013-02-27",
    "numero_dossier": "12/00996",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-08-01",
    "numero_dossier": "17/00720",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1953",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2017-02-27",
    "numero_dossier": "16/00504",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1938",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2018-12-19",
    "numero_dossier": "18/01077",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1948",
    "civilite": "H",
    "code_postal": 59320,
    "date_ouverture": "2018-06-13",
    "numero_dossier": "17/01363",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2016-03-31",
    "numero_dossier": "15/01265",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1927",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-01-06",
    "numero_dossier": "14/01014",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1922",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2013-01-31",
    "numero_dossier": "12/00605",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1942",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-10-15",
    "numero_dossier": "97/06510",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1923",
    "civilite": "F",
    "code_postal": 62220,
    "date_ouverture": "2018-05-28",
    "numero_dossier": "18/00096",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "carvin",
  },
]
`;

exports[`fix various invalid data should normalize civilites 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`read: rename columns should rename approximative columns 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`read: rename columns should rename approximative columns 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`valid civilites should normalize civilites 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": "H",
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": "H",
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`valid civilites should normalize civilites 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 4000,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
]
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Année non valide : \\"4000\\"",
    ],
  },
}
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 1`] = `
Array [
  Object {
    "civilite": undefined,
    "date_ouverture": "2015-12-25",
    "type": "Curatelle",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "Invalid Date",
    "type": "Tutelle",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Tutelle",
  },
]
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Date d'ouverture non valide : \\"Invalid Date\\"",
    ],
  },
}
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2003,
    "civilite": "H",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 2004,
    "civilite": "H",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 2009,
    "civilite": "F",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;
